--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -26,7 +26,7 @@
 %\usepackage[brazilian]{babel}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \onehalfspacing
-
+\urlstyle{sf}
 \setdescription{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
 \setitemize{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
 \setenumerate{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
@@ -131,9 +131,9 @@ Banca examinadora:\par
 
 \include{capitulos/introducao}
 \include{capitulos/capitulo1}
-\include{capitulos/capitulo2}
+%\include{capitulos/capitulo2}
 \include{capitulos/capitulo3}
-\include{capitulos/capitulo4}
+%\include{capitulos/capitulo4}
 % \include{capitulos/capitulo5}
 % \include{capitulos/capitulo6}
 % \include{capitulos/capitulo7}
