--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -11,13 +11,14 @@ Existem duas abordagens para o Processamento de Linguagem Natural, sendo que a
 primeira delas é chamada de simbólica (ou racionalista) e a outra de empírica
 (ou estatística).
 A primeira abordagem consiste em uma série de regras para a manipulação de
-símbolos, como as regras gramaticais, que permitem identificar se uma frase está malformada ou não. A abordagem empírica está centrada na análise estatística da linguagem através de grandes quantidades
-de textos, como por exemplo, a utilização de modelos de Markov para reconhecer padrões
-na escrita \cite{jacksonmoulinier2007}.
+símbolos, como as regras gramaticais, que permitem identificar se uma frase está
+malformada ou não. A abordagem empírica está centrada na análise estatística da
+linguagem através de uma grande quantidade de texto, como por exemplo, a
+utilização de modelos de Markov para reconhecer padrões na escrita \cite{jacksonmoulinier2007}.
 
 Existem diversos \textit{frameworks open source} que facilitam o desenvolvimento
 de \textit{softwares} para o Processamento de Linguagem Natural, sendo que
-dentre esses se destacam \textit{Stanford's Core NLP Suite} \cite{corenlp},
+dentre esses destacam-se o \textit{Stanford's Core NLP Suite} \cite{corenlp},
 \textit{Natural Language Toolkit} \cite{nltk}, \textit{Apache OpenNLP} \cite{opennlp} e \textit{Spacy}
 \cite{spacy}.
 Esses \textit{frameworks} nos permitem, entre outras coisas, efetuar análise de
@@ -57,7 +58,7 @@ trabalho, os seguintes objetivos específicos devem ser realizados:
   \item Desenvolver uma ferramenta para o Processamento Natural de Linguagem através de
 \textit{frameworks} já existentes.
  \item Construção de uma base de dados a partir do \textit{website} Reddit.
- \item Efetuar o processamento da base de dados criado utilizando-se a
+ \item Efetuar o processamento da base de dados criada utilizando-se a
  ferramenta desenvolvida.
 \end{itemize}
 
